Progress on the node editor

--- a/src/nadio/data/lang/en_US.cfg
+++ b/src/nadio/data/lang/en_US.cfg
@@ -6,3 +6,12 @@ region = "United States"
 song = "Song"
 pattern = "Pattern"
 instrument = "Instrument"
+
+[Node/AudioOut]
+name = "Audio Output"
+inAudio = "Audio"
+
+[Node/SinOsc]
+name = "Sine Oscillator"
+inFrequency = "Frequency"
+outWave = "Wave"
