Fixed node disconnections

--- a/src/nadio/data/lang/en_US.cfg
+++ b/src/nadio/data/lang/en_US.cfg
@@ -9,7 +9,8 @@ instrument = "Instrument"
 
 [Node/AudioOut]
 name = "Audio Output"
-inAudio = "Audio"
+inLeft = "Left"
+inRight = "Right"
 
 [Node/SinOsc]
 name = "Sine Oscillator"
