--- a/src/nadio/data/lang/en_US.cfg
+++ b/src/nadio/data/lang/en_US.cfg
@@ -7,6 +7,10 @@ song = "Song"
 pattern = "Pattern"
 instrument = "Instrument"
 
+[NodeCategory]
+oscillators = "Oscillators"
+ladspa = "LADSPA"
+
 [Node/AudioOut]
 name = "Audio Output"
 inLeft = "Left"
