Removed build artifacts

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -4,8 +4,14 @@ NIM := nim c --app:lib
 
 build-all: _out/test.so
 
+clean:
+	rm -rf _out
+
 install: build-all
 	cp _out/* ~/.local/share/Nadio/plugins
 
-_out/test.so: test/test.nim
+_out:
+	mkdir _out
+
+_out/test.so: _out test/test.nim
 	$(NIM) -o:_out/test.so test/test.nim
