--- a/src/nadio/data/lang/en_US.cfg
+++ b/src/nadio/data/lang/en_US.cfg
@@ -8,8 +8,10 @@ pattern = "Pattern"
 instrument = "Instrument"
 
 [NodeCategory]
-oscillators = "Oscillators"
+gen = "Generators"
+effect = "Effects"
 ladspa = "LADSPA"
+misc = "Miscellaneous"
 
 [Node/AudioOut]
 name = "Audio Output"
