more progress on the node lib, except the SEGVs of course

--- a/src/nadio/data/lang/en_US.cfg
+++ b/src/nadio/data/lang/en_US.cfg
@@ -7,6 +7,11 @@ song = "Song"
 pattern = "Pattern"
 instrument = "Instrument"
 
+[Action]
+add = "Add"
+addMore = "Add…"
+delete = "Delete"
+
 [NodeCategory]
 gen = "Generators"
 effect = "Effects"
@@ -17,8 +22,3 @@ misc = "Miscellaneous"
 name = "Audio Output"
 inLeft = "Left"
 inRight = "Right"
-
-[Node/SinOsc]
-name = "Sine Oscillator"
-inFrequency = "Frequency"
-outWave = "Wave"
